css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    font-family: "Bebas Neue", sans-serif;
}

/* start header */
.container .header {
    width: 100%;
    position: fixed;
    background-color: black;
    z-index: 1000;
}

.container .header nav {
    width: 90%;
    margin: auto;
}

.container .header nav .logo {
    float: left;
}

.container .header nav ul {
    float: right;
    padding: 15px 0px;
}

.container .header nav ul li {
    display: inline-block;
    margin-left: 10px;
    list-style: none;
}

.container .header nav ul li a {
    text-decoration: none;
    padding: 5px 10px;
    font-size: 20px;
    position: relative;
}

.container .header nav ul li a::before {
    content: '';
    position: absolute;
    width: 0%;
    height: 2px;
    background-color: white;
    bottom: 4px;
}

.container .header nav ul li a:hover::before {
    width: 100%;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
}

.container .header nav ul li #blog {
    position: relative;
}

.container .header nav ul li #blog .blog {
    position: absolute;
    bottom: -45px;
    right: -55px;
    width: 150px;
    padding: 5px 5px;
    text-align: center;
    border-radius: 8px;
    display: none;
    background-color: black;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    -ms-border-radius: 8px;
    -o-border-radius: 8px;
}

.container .header nav ul li #blog:hover .blog {
    display: block;
}

.container .header nav ul li a,
.container .header nav .logo {
    text-transform: capitalize;
    padding: 15px 0px;
    color: white;
    font-family: sans-serif;
}

.container .header nav .logo span,
.container .header nav .logo i {
    font-size: 25px;
    color:white;
}

/* end header */
/* hero start */
.container #hero {
    width: 100%;
    height: 100vh;
    background-image: url(../img/hero-img.jpg);
    background-size: cover;
    position: relative;
}

.container #hero .hero-parent {
    width: 90%;
    height: 90%;
    margin: auto;
}

.container #hero .hero-parent .hero-text {
    width: 100%;
    text-align: center;
    position: relative;
    top: 50%;
}

.container #hero .hero-parent .hero-text h1 {
    font-size: 100px;
    font-weight: 700;
    color: white;
    letter-spacing: 2px;
    font-family: 'Bebas Neue';
}

.container #hero .hero-parent .hero-text p {
    font-size: 35px;
    color: white;
    opacity: 0.7;
}

.container #hero .hero-parent .hero-text .hero-btn button {
    padding: 10px 25px;
    margin: 10px 5px;
    font-size: 25px;
    text-transform: capitalize;
    border: none;
    border-radius: 8px;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    -ms-border-radius: 8px;
    -o-border-radius: 8px;
}

.container #hero .hero-parent .hero-text .hero-btn .btn-one {
    background-color: black;
    color: white;
}

.container #hero .hero-parent .hero-text .hero-btn .btn-two {
    background-color: rgba(128, 128, 128, 0.548);
}

/* hero end */
/*  */
.container #about {
    width: 100%;
    height: 80vh;
}

.container #about .about-parent {
    width: 80%;
    margin: auto;
    position: relative;
    top: 30%;
    overflow: auto;
}

.container #about .about-parent .about-title,
.container #galary .galary-title,
.container #protifolio .protifolio-parent .protifolio-title,
.container #pricing-section .pricing-title,
.container #our-team .our-team-parent .our-team-title,
.container #news .news-parent .new-title {
    text-align: center;
    margin-bottom: 35px;
}

.container #about .about-parent .about-title .under-line,
.container #galary .galary-title .under-line,
.container #protifolio .protifolio-parent .protifolio-title .under-line,
.container #pricing-section .pricing-title .under-line,
.container #our-team .our-team-parent .our-team-title .under-line,
.container #news .news-parent .new-title .under-line {
    width: 100px;
    height: 5px;
    background-color: black;
    margin: auto;
}

.container #about .about-parent .about-title h2,
.container #galary .galary-title h2,
.container #protifolio .protifolio-parent .protifolio-title h2,
.container #pricing-section .pricing-title h2,
.container #our-team .our-team-parent .our-team-title h2,
.container #news .news-parent .new-title h2 {
    font-size: 55px;
    font-weight: 600;
    font-family: sans-serif;
    text-transform: capitalize;
    padding: 15px 0px;
}

.container #about .about-parent .box {
    float: left;
    width: 30%;
    padding: 20px 15px;
    text-align: center;
    border: 2px solid gray;
    position: relative;
    padding: 10px;
}

.container #about .about-parent .box::before {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 0px;
    height: 0px;
    background-color: rgba(128, 128, 128, 0.249);
}

.container #about .about-parent .box:hover::before {
    width: 100%;
    height: 100%;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
}

.container #about .about-parent .box:hover h2 {
    color: black;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
}

.container #about .about-parent .box h2 {
    font-size: 35px;
    font-weight: 600;
    padding: 5px 0px 2px 0px;
    color: rgb(73, 72, 72);
}

.container #about .about-parent .box p {
    font-size: 18px;
    opacity: 0.7;
}

.container #about .about-parent .box i {
    color: gray;
    font-size: 35px;
}

.container #about .about-parent .center-box {
    margin: 0px 5%;
}

/*  */
/*  */
.container #galary .galary-parent {
    width: 90%;
    margin: auto;
}
/* ... */

